--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ form {
   text-align: center;
 }
 
-input{
+input {
   padding-top: 3px;
   padding-bottom: 3px;
   font-size: 16px;
@@ -60,4 +60,31 @@ input:active, input:focus {
 .text-box {
   width: 80%;
   margin: auto;
+}
+
+.submit-btn {
+  margin: 0 auto;
+  font-family: "Roboto";
+  font-size: 14px;
+  padding: 10px 0;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: #FFF;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  width: 200px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  cursor: pointer;
+  display: block;
+  border-radius: 25px;
+  background-image: linear-gradient(to right, #282bd8 0%, #560e99 51%, #820e99 100%)
+}
+
+.submit-btn:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  margin: 0 auto;
+  background-position: right center;
 }
