--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   width: 35%;
   margin: auto;
   border-radius: 20px;
-  padding: 2%;
+  padding: 3%;
 }
 
 .title {
@@ -74,7 +74,7 @@ input:active, input:focus {
   color: #FFF;
   box-shadow: 0 0 20px #eee;
   border-radius: 10px;
-  width: 200px;
+  width: 150px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   cursor: pointer;
@@ -87,4 +87,42 @@ input:active, input:focus {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   margin: 0 auto;
   background-position: right center;
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 769px) {
+  .form-section {
+    width: 55%;
+  }
+  .text-box {
+    width: 70%;
+  }
+  form {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .form-section {
+    width: 75%;
+  }
+  .text-box {
+    width: 90%;
+  }
+  form {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .form-section {
+    width: 90%;
+  }
+  .text-box {
+    width: 90%;
+  }
+  form {
+    width: 100%;
+  }
+  hr {
+    width: 40%;
+  }
 }
