--- a/src/App.css
+++ b/src/App.css
@@ -30,11 +30,6 @@ hr {
   margin-top: 0;
 }
 
-label {
-  color: #696969;
-  font-size: 16px;
-}
-
 form {
   margin-top: 30px;
   width: 90%;
@@ -46,15 +41,8 @@ form {
   text-align: center;
 }
 
-input {
-  padding-top: 3px;
-  padding-bottom: 3px;
-  font-size: 16px;
-  border-radius: 7px;
-}
-
-input:active, input:focus {
-  outline: none !important;
+input.form-control:focus, select.form-control:focus {
+  box-shadow: inset 0 -1px 0 #ddd;
 }
 
 .text-box {
@@ -73,11 +61,9 @@ input:active, input:focus {
   background-size: 200% auto;
   color: #FFF;
   box-shadow: 0 0 20px #eee;
-  border-radius: 10px;
   width: 150px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  cursor: pointer;
   display: block;
   border-radius: 25px;
   background-image: linear-gradient(to right, #282bd8 0%, #560e99 51%, #820e99 100%)
